# GooglyEyesService

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: config.yaml  constants.py  detection_helpers.py  googlifier.py  image_operations.py  setup_logger.py
src/api/: api.py
src/detectors/: base_detector.py  eyes_detector_cv2.py  face_detector_cv2.py
src/gui_app/: run_live_googly_eyes.py
src/stubs/: constants.pyi  detection_helpers.pyi  detectors.base_detector.pyi  googlifier.pyi  image_operations.pyi  setup_logger.pyi
tests/performance_tests/: locust_test.py
tests/unit_tests/: test_api.py  test_googlifier.py
